src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
/* ... */
.p-cancel-register {
    display: flex;
    align-items: center;
    justify-content: center;
}

.form-group input {
    height: 44px !important;
}

.container {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 40px;
    padding: 24px 16px 16px 16px;

    background-color: var(--background);
    max-width: 100%;
}

input.inverted-out:focus {
    color: var(--foreground-inputs-odds);
    border: 1px solid var(--highlight);
}

input.inverted-out:focus label{
    color: var(--foreground-inputs-odds);
}

.form-control.is-invalid:focus {
    -webkit-box-shadow: none;
}

.form-control.is-invalid {
    border-color: #dc3545;
    padding-right: calc(1.5em + 0.75rem);
}


.container-header {
    display: flex;
    flex-direction: column;
    gap: 14px;
    margin-bottom: auto;
}

.header-register {
    color: var(--foreground);
    display: flex;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    padding: 16px;
}

.header-register-item {
    background: var(--background);
    display: flex;
    align-items: center;
    justify-content: center;
}

.btn-close-register i {
    font-size: 22px;
    color: var(--highlight);
}

.btn-close-register {
    box-sizing: content-box;
    background-color: var(--background);
    border: 0;
    border-radius: 4px;
}

.body {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.modal-footer-he {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    margin-top: 10px;
    margin-bottom: 10px;
    height: 100%;
}

h3 {
    font-size: 16px;
    font-weight: 600;
}

.close-register-cancel-header {
    display: flex;
    justify-content: end;
    margin-top: 10px;
}

button {
    margin: 0 auto;
    width: 100%;
}

.space-buttons {
    display: block;
    text-align: center;
    margin-bottom: 15px;
}

.text-muted {
    color: var(--foreground) !important;
    opacity: 65%;
}

.modal-footer-he {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    margin-top: 10px;
    margin-bottom: 20px;
    height: 100%;
}

.btn-cancel {
    background-color: transparent;
    margin-top: 5px;
    color: rgba(var(--foreground-inputs-odds-rgb) 0.5);
    border: none;
    margin-top: 20px;
    width: 100%;
}

.register-cancel-modal {
    width: 450px;
    margin: 0 20px;
    display: flex;
    flex-direction: column;
    gap: 1px;

    background-color: var(--background);
}

.text-body-register-cancel {
    padding: 0px !important;
    display: flex;
    gap: 5px;
    flex-direction: column;
}

.text-register-cancel {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.modal-title-register {
    color: var(--foreground-inputs-odds);
    font-weight: 600;
    font-size: 22px;
    text-align: center;
}

.p-cancel-register {
    text-align: center;
    color: rgba(var(--foreground-inputs-odds-rgb, 0.8));
    font-weight: 400;
    font-size: 13px;
    text-align: center;
    padding: 0px 10px;
    width: 100%;
}

.div-button-personalized {
    display: flex;
    height: 44px;
    flex-direction: column;
    border-radius: 4px;
    border: 0.1px solid rgba(var(--foreground-inputs-odds-rgb), 0.5);
    color: rgba(var(--foreground-inputs-odds-rgb), 0.5);
    background: var(--input);
    max-height: 44px;
    gap: 4px;
}

.label-personalized {
    max-height: 10px;
    padding-left: 14px;
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.style-phone-country-code {
    display: flex;
    flex-direction: row;
    gap: 5px;
}

.input-phone{
    width: 72%;
}

.modal-footer-onboarding{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 6px;
    width: 100%;
}

.span-afiliado{
    color:rgba(var(--foreground-inputs-odds-rgb), 0.5);
    font-size: 12px;
    font-weight: 400;
    line-height: normal;
}

.contents-afiliado{
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.contents-afiliado i{
    color:rgba(var(--foreground-inputs-odds-rgb), 0.5);
}

.section-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 8px;
}

.div-country{
    width: 100%;
}

.div-option-register-or-login {
    display: none;
}

.select-nationality {
    padding-right: 14px;
}
.country-personalized{
    width: 27%;
}

.style-select {
    border: none;
    appearance: menulist;
    -webkit-appearance: menulist;
    -moz-appearance: menulist;
    outline: none;
    max-height: 26px;
    color: rgba(var(--foreground-inputs-odds-rgb), 0.5);
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    border: none !important;
    background-color: transparent;
}

.select-country-code{
    width: 30%;
}

.tooltip {
    z-index: 9999999999;
}

.label-country-code{
    color: rgba(var(--foreground-inputs-odds-rgb), 0.5);
}

.text-input {
    color: rgba(var(--foreground-inputs-odds-rgb), 0.5);
    padding-left: 5px;
}

h3 {
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 25px;
}

.btn-footer{
    color: var(--highlight);
}

.close-modal-activation {
    border-radius: 100%;
    display: flex;
    cursor: pointer;
    padding-top: 3px;
    padding-right: 5px;
}

.close-modal-activation i {
    margin: 10px;
    color: var(--highlight);
    font-size: 22px;
}

.showPassword {
    position: absolute;
    top: calc(50% - 16px);
    right: 0;
    color: rgba(var(--foreground-inputs-odds-rgb), 0.5);
    cursor: pointer;
    padding: 10px;
}

a.link-termos-politica {
    cursor: pointer;
    text-decoration: underline;
    color: var(--highlight);
}

.bars {
    display: flex;
    align-items: center;
    gap: 3px;
    align-self: stretch;
}

.strong-bar-one,
.strong-bar-two,
.strong-bar-three {
    border: 1px solid gray;
    width: 33%;
    background-color: gray;
    border-radius: 29;
}
/* ... */

